Update cowsay action alias

--- a/aliases/cowsay.yaml
+++ b/aliases/cowsay.yaml
@@ -1,9 +1,21 @@
 # this is command alias for `actions/cowsay.yaml` action
-# allows to run ChatOps command: `cowsay "Holy ChatOps Cow!"`
-# eq: cowsay "Holy ChatOps Cow!"
+# allows to run ChatOps command: `cowsay Holy ChatOps Cow!`
+# eq: `/usr/games/cowsay Holy ChatOps Cow!`
 ---
 name: chatops.cowsay
 action_ref: st2-chatops-aliases.cowsay
 description: Draws a cow that says what you want
 formats:
-  - "cowsay {{message}}"
+  - display: "cowsay <message>"
+    representation:
+      - "cowsay {{ message }}"
+ack:
+  enabled: false
+result:
+  format: |
+    {% if execution.status == 'succeeded' %}Here is your cow: ```{{ execution.result.stdout }}``` {~}{% else %}
+    Sorry, no cows this time {~}
+    Exit Code: `{{ execution.result.return_code }}`
+    Stderr: ```{{ execution.result.stderr }}```
+    Hint: Make sure `cowsay` utility is installed.
+    {% endif %}
