--- a/pack.yaml
+++ b/pack.yaml
@@ -1,7 +1,12 @@
 ### Place information about your pack version here.
 ---
+ref: st2-chatops-aliases
 name: st2-chatops-aliases
 description: Pack with sample Ansible ChatOps aliases
-version: 0.1.0
-author: StackStorm Stanley
-email: stanley@stackstorm.com
+keywords:
+  - chatops
+  - aliases
+  - ansible
+version: 0.2.0
+author: armab
+email: armab@stackstorm.com
