--- a/pack.yaml
+++ b/pack.yaml
@@ -1,7 +1,7 @@
 ### Place information about your pack version here.
 ---
-ref: st2-chatops-aliases
-name: st2-chatops-aliases
+ref: st2_chatops_aliases
+name: st2_chatops_aliases
 description: Pack with sample Ansible ChatOps aliases
 keywords:
   - chatops
