--- a/aliases/http_status_codes.yaml
+++ b/aliases/http_status_codes.yaml
@@ -3,7 +3,7 @@
 # eq: /opt/stackstorm/virtualenvs/ansible/bin/ansible web --become -m shell -a "awk '{print \$9}' /var/log/nginx/access.log|sort |uniq -c |sort -k1,1nr 2>/dev/null|column -t"
 ---
 name: chatops.http_status_codes
-action_ref: st2-chatops-aliases.http_status_codes
+action_ref: st2_chatops_aliases.http_status_codes
 description: Show sorted http status codes from nginx on hosts
 formats:
   - display: "show nginx stats on <hosts>"
