--- a/aliases/mysql_processlist.yaml
+++ b/aliases/mysql_processlist.yaml
@@ -3,7 +3,7 @@
 # eq: /opt/stackstorm/virtualenvs/ansible/bin/ansible db --become --become-user=root -m shell -a "mysql --execute='SHOW PROCESSLIST;' | expand -t 10"
 ---
 name: chatops.mysql_processlist
-action_ref: st2-chatops-aliases.mysql_processlist
+action_ref: st2_chatops_aliases.mysql_processlist
 description: Show MySQL processlist
 formats:
   - display: "show mysql processlist <hosts=db>"
