--- a/aliases/service_restart.yaml
+++ b/aliases/service_restart.yaml
@@ -3,7 +3,7 @@
 # eq: `/opt/stackstorm/virtualenvs/ansible/bin/ansible web --become --module-name=service --args='name=nginx state=restarted'`
 ---
 name: chatops.ansible_service_restart
-action_ref: st2-chatops-aliases.service_restart
+action_ref: st2_chatops_aliases.service_restart
 description: Restart service on remote hosts
 formats:
   - display: "service restart <service_name> on <hosts>"
