--- a/aliases/update_package.yaml
+++ b/aliases/update_package.yaml
@@ -3,7 +3,7 @@
 # see playbook: `ansible/update_package.yaml`
 ---
 name: chatops.ansible_package_update
-action_ref: st2-chatops-aliases.update_package
+action_ref: st2_chatops_aliases.update_package
 description: Update package on remote hosts
 formats:
   - display: "update <package> on <hosts>"
