--- a/playbooks/update_package.yaml
+++ b/playbooks/update_package.yaml
@@ -12,7 +12,7 @@
       changed_when: no
 
     - name: Update Package only if installed
-      apt: name={{ package }}
+      yum: name={{ package }}
         state=latest
         update_cache=yes
         cache_valid_time=600
