--- a/actions/deploy_staging.yaml
+++ b/actions/deploy_staging.yaml
@@ -17,7 +17,7 @@ parameters:
     description: "Command to run"
     immutable: true
     default: "/opt/stackstorm/virtualenvs/ansible/bin/ansible-playbook /opt/stackstorm/packs/${ST2_ACTION_PACK_NAME}/playbooks/deploy_staging.yaml --extra-vars='hosts={{hosts|replace('http://','')}} type={{type}}'"
-  type:
+  deploy_type:
     description: "deploy type"
     type: string
     required: true
