--- a/actions/deploy_staging.yaml
+++ b/actions/deploy_staging.yaml
@@ -16,7 +16,7 @@ parameters:
   cmd:
     description: "Command to run"
     immutable: true
-    default: "/opt/stackstorm/virtualenvs/ansible/bin/ansible-playbook /opt/stackstorm/packs/${ST2_ACTION_PACK_NAME}/playbooks/deploy_staging.yaml --extra-vars='deploy_type={{deploy_type}}'"
+    default: "/opt/stackstorm/virtualenvs/ansible/bin/ansible-playbook --forks=1 /opt/stackstorm/packs/${ST2_ACTION_PACK_NAME}/playbooks/deploy_staging.yaml --extra-vars='deploy_type={{deploy_type}}'"
   deploy_type:
     description: "deploy type"
     type: string
